--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
+      <div id="text-room" style="display: none">
+          <div id="text-room-content">
+            <h3>Text Room</h3>
+          </div>
+          <input id="text-room-input">
+          <button onclick="textRoomPress();">Send</button>
+      </div>
       <div style="margin: 70px;">
         <div class="video-block"><video id="self-view" autoplay></video></div>
         <div id="remote-view-container" class="video-block"></div>
