--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 <button id="chat-btn" class="btn btn-primary" onclick="chat()";"><span class="glyphicon glyphicon-comment"></span></button>
                 <button id="leave-btn" class="btn btn-danger" onclick="callDisconnect();">Cancel</button>
               </div>
+              <div><input id="slider" type="range" min="0" max="10" value="0" style="width: 100px;" onchange="zoom(event)"></div>
             </div>
             <div class="col-md-7" id="chat-block">
                 <div id="text-room-content" class="row"></div>
@@ -124,7 +125,7 @@
                       <span class="btn btn-primary" onclick="clearChat();">Clear</span>
                     </div>
                 </div>
-                <div class="row"> <span id="typing-span"></span></div>
+                <div class="row"><span id="typing-span"></span></div>
             </div>
       </div>
       <script type="text/javascript" src="app.js"></script>
