--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
       .chat-container p {
         margin: 0;
+        color: #000;
       } 
       .in-coming-msg {
         background-color: #ddd;
