Set chat option at the bottom

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         color: #ffffff;
       }
       #text-room-content {
-        max-height: 200px;
+        height: 200px;
         overflow: scroll;
       }
 
